@@ -82,9 +82,9 @@
    #define INCL_NOPMAPI
 #endif
 
-/* NOTE: The following #include "wincheck.h" must
+/* NOTE: The following #include "hbwinapi.h" must
          be ahead of any other #include statements! */
-#include "wincheck.h"
+#include "hbwinapi.h"
 
 #ifdef HARBOUR_USE_WIN
    #define INPUT_BUFFER_LEN 128
